# http-file-maker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
_docs/: http-file-maker-sequence.wsd  sharelink-api-spec.yaml  sharelink-api.http
ports/c-sharp/: .gitignore  HttpFileMaker.cs  HttpFileMaker.csproj  OpenApiParser.cs  Program.cs  README.md
src/: __init__.py  http_file_maker.py  openapi_parser.py
