[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-file-maker"
version = "0.1.0"
description = "A tool for generating HTTP request files in various formats from command-line arguments or OpenAPI/Swagger specifications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HTTP File Maker Contributors"}
]
keywords = ["http", "api", "openapi", "swagger", "rest", "curl", "httpie"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
http-file-maker = "src.http_file_maker:main"

[project.urls]
Homepage = "https://github.com/packetsdontlie/http-file-maker"
Repository = "https://github.com/packetsdontlie/http-file-maker"
Issues = "https://github.com/packetsdontlie/http-file-maker/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

